[package]
name = "wallet_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.4.2", features = ["full"] }
tokio = { version = "1.40.0", features = ["full"]}
anyhow = "1.0.89"
futures-util = "0.3.31"
lettre = { version = "0.11.9", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-native-tls", "builder"]}
lettre_email = "0.9.4"
